fix hover menu overflow on subject detail view

--- a/app/assets/stylesheets/api/subjects.scss
+++ b/app/assets/stylesheets/api/subjects.scss
@@ -4,7 +4,7 @@
   display: flex;
   background-color: $off-white;
   width: 25vw;
-  height: 650px;
+  height: 450px;
   overflow-y: scroll;
   flex-direction: column;
   align-self: flex-start;
